--- a/SampleApp/MainWindow.xaml
+++ b/SampleApp/MainWindow.xaml
@@ -10,14 +10,21 @@
     <Window.DataContext>
         <ViewModels:MainWindowVM/>
     </Window.DataContext>
-    <Grid>
-        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="146,108,0,0" VerticalAlignment="Top">
+    <StackPanel>
+        <Button Width="100" Margin="5" Content="SQL Server" HorizontalAlignment="Left" VerticalAlignment="Top">
             <b:Interaction.Triggers>
                 <b:EventTrigger EventName="Click">
                     <b:CallMethodAction TargetObject="{Binding}" MethodName="OpenSQLServerStringConnection"/>
                 </b:EventTrigger>
             </b:Interaction.Triggers>
         </Button>
+        <Button Width="100" Margin="5" Content="SQLite" HorizontalAlignment="Left" VerticalAlignment="Top">
+            <b:Interaction.Triggers>
+                <b:EventTrigger EventName="Click">
+                    <b:CallMethodAction TargetObject="{Binding}" MethodName="OpenSQLiteStringConnection"/>
+                </b:EventTrigger>
+            </b:Interaction.Triggers>
+        </Button>
 
-    </Grid>
+    </StackPanel>
 </Window>
