--- a/StringBuilderDialog/Views/SQLiteConnectionBuilderDialog.xaml
+++ b/StringBuilderDialog/Views/SQLiteConnectionBuilderDialog.xaml
@@ -1,23 +1,23 @@
-﻿<Window
+﻿<Window x:Class="StringBuilderDialog.Views.SQLiteConnectionBuilderDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
-        xmlns:local="clr-namespace:StringBuilderDialog.Views"
         xmlns:hlp="clr-namespace:StringBuilderDialog.Common.Helpers"
         xmlns:ViewModels="clr-namespace:StringBuilderDialog.ViewModels"
         xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:Converters="clr-namespace:StringBuilderDialog.Common.Converters"
-        x:Class="StringBuilderDialog.Views.MSSQLServerDialog"
+
+        xmlns:local="clr-namespace:StringBuilderDialog.Views"
         mc:Ignorable="d"
-        Title="MSSQLServerDialog" SizeToContent="WidthAndHeight" ResizeMode="NoResize" WindowStartupLocation="CenterScreen"
+        Title="SQLiteConnectionBuilderDialog" Height="450" Width="800"
+        SizeToContent="WidthAndHeight" ResizeMode="NoResize" WindowStartupLocation="CenterScreen"
         hlp:DialogResultHelper.DialogResult="{Binding DialogResult, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
     <Window.Resources>
         <Converters:InverseBooleanConverter x:Key="InverseBooleanConverter"/>
     </Window.Resources>
     <Window.DataContext>
-        <ViewModels:MSSQLServerDialogVM/>
+        <ViewModels:SQLiteConnectionBuilderDialogVM/>
     </Window.DataContext>
     <b:Interaction.Triggers>
         <b:EventTrigger EventName="Loaded">
@@ -29,41 +29,29 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
-        <GroupBox Header="Microsoft SQL Server" Margin="5">
+        <GroupBox Header="SQQLite" Margin="5">
             <TabControl Margin="5">
                 <TabItem Header="ログイン">
                     <StackPanel VerticalAlignment="Center">
                         <StackPanel Margin="5" Orientation="Horizontal">
-                            <TextBlock Width="80" TextAlignment="Right" Margin="5" Text="サーバー名"/>
+                            <TextBlock Width="80" TextAlignment="Right" Margin="5" Text="ファイルパス"/>
                             <TextBlock Margin="5" Text=":"/>
-                            <TextBox VerticalAlignment="Center" Width="200" Text="{Binding DataSource}"/>
+                            <TextBox VerticalAlignment="Center" Width="350" Text="{Binding DataSource, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                            <Button Margin="5" Width="100" Content="ファイル">
+                                <b:Interaction.Triggers>
+                                    <b:EventTrigger EventName="Click">
+                                        <b:CallMethodAction TargetObject="{Binding}" MethodName="OpenFile"/>
+                                    </b:EventTrigger>
+                                </b:Interaction.Triggers>
+                            </Button>
                         </StackPanel>
                         <StackPanel Margin="5" Orientation="Horizontal">
-                            <TextBlock Margin="5" Width="80" TextAlignment="Right" Text="データベース名"/>
+                            <TextBlock Margin="5" Width="80" TextAlignment="Right" Text="パスワード"/>
                             <TextBlock Margin="5" Text=":"/>
-                            <TextBox VerticalAlignment="Center" Width="200" Text="{Binding InitialCatalog}"/>
-                        </StackPanel>
-                        <CheckBox x:Name="checkBox" Margin="5" Content="Windowsサーバー認証" IsChecked="{Binding IntegratedSecurity}"/>
-                        <GroupBox Margin="5" Header="SQL Server 認証" IsEnabled="{Binding IsChecked, Converter={StaticResource InverseBooleanConverter}, ElementName=checkBox, Mode=OneWay}">
-                            <StackPanel>
-                                <StackPanel Margin="5" Orientation="Horizontal">
-                                    <TextBlock Margin="5" Width="80" TextAlignment="Right" Text="ユーザー名"/>
-                                    <TextBlock Margin="5" Text=":"/>
-                                    <TextBox VerticalAlignment="Center" x:Name="txUserID" Width="200" 
-                                 Text="{Binding UserID}"/>
-                                </StackPanel>
-                                <StackPanel Margin="5" Orientation="Horizontal">
-                                    <TextBlock Margin="5" Width="80" TextAlignment="Right" Text="パスワード"/>
-                                    <TextBlock Margin="5" Text=":"/>
-                                    <PasswordBox VerticalAlignment="Center"
+                            <PasswordBox VerticalAlignment="Center"
                                      hlp:PasswordBoxHelper.Password="{Binding Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" hlp:PasswordBoxHelper.IsAttached="True" x:Name="txPassword" Width="200"/>
-                                </StackPanel>
-                            </StackPanel>
-                        </GroupBox>
-                        <StackPanel Margin="5" Orientation="Horizontal">
-                            <CheckBox VerticalAlignment="Center" Content="暗号化" Margin="5" IsChecked="{Binding Encrypt}"/>
-                            <CheckBox VerticalAlignment="Center" Content="サーバー証明書を信頼する" Margin="5" IsChecked="{Binding TrustServerCertificate}"/>
                         </StackPanel>
+
                     </StackPanel>
                 </TabItem>
             </TabControl>
